• Removes horizantal scrollbar for different browsers • Fixes carouel issue with title - would previously overflow into other cards

--- a/anime-archive/src/components/carouselCard/CarouselCard.css
+++ b/anime-archive/src/components/carouselCard/CarouselCard.css
@@ -1,10 +1,14 @@
 .carouselCard {
   margin: 0 8px;
-  padding: 3% 2.5% 8% 0;
+  padding: 3% 5% 0% 0;
 }
 
 .carouselCardTitle {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 173px;
+  overflow: hidden;
 }
 
 .carouselImage img {
